homework/7.advanced-abstractions/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  ports:
    - port: 80
      targetPort: 9090
  selector:
    app: prometheus
...
